tests/parsing-test/test_out/struct-ast.txt
error: expected Ident but got 'struct'
 --> \\?\C:\src\rust\catalyst\tests\parsing-test\struct-ast\package.ctlm:1:1
  |
1 | struct
  | ^^^^^^ token located here
  |
  = info: manifest -> manifest field -> name

